# cms-be/dto/response.go
@@ -1,15 +1,18 @@
 package dto
 
 type Response struct {
+	Status  int    `json:"status"`
 	Message string `json:"message"`
 }
-type ResponsePaginate struct {
-	Data  interface{} `json:"data"`
-	Page  int         `json:"page"`
-	Limit int         `json:"limit"`
-	Total int         `json:"total"`
+type ResponsePaginate[T any] struct {
+	Status int
+	Data   T   `json:"data"`
+	Page   int `json:"page"`
+	Limit  int `json:"limit"`
+	Total  int `json:"total"`
 }
 
-type ResponseData struct {
-	Data interface{} `json:"data"`
+type ResponseData[T any] struct {
+	Status int `json:"status"`
+	Data   T   `json:"data"`
 }
