# cms-be/internal/api/user.go
@@ -24,8 +24,9 @@ func NewUser(userService service.UserService) *userApi {
 // @Accept json
 // @Produce json
 // @Security BearerAuth
-// @Success 200 {object} dto.Response
-// @Success 500 {object} dto.Response
+// @Success 200 {object} dto.ResponsePaginate[[]dto.UserData]
+// @Failure 500 {object} dto.Response
+// @Failure 401 {object} dto.Response
 // @Router /admin/user [get]
 func (api userApi) GetAll(ctx *fiber.Ctx) error {
 	page, _ := strconv.Atoi(ctx.Query("page"))
@@ -39,10 +40,17 @@ func (api userApi) GetAll(ctx *fiber.Ctx) error {
 	users, err := api.userService.GetPaginate(page, limit)
 	if err != nil {
 		return ctx.Status(fiber.StatusInternalServerError).JSON(dto.Response{
+			Status:  fiber.StatusInternalServerError,
 			Message: err.Error(),
 		})
 	}
-	return ctx.Status(fiber.StatusOK).JSON(users)
+	return ctx.Status(fiber.StatusOK).JSON(dto.ResponsePaginate[[]dto.UserData]{
+		Status: fiber.StatusOK,
+		Limit:  limit,
+		Page:   page,
+		Total:  len(users),
+		Data:   users,
+	})
 }
 
 // @Tags User
@@ -52,19 +60,23 @@ func (api userApi) GetAll(ctx *fiber.Ctx) error {
 // @Produce json
 // @Security BearerAuth
 // @Param project body dto.UserReq true "Data User"
-// @Success 200 {object} dto.ResponseData
-// @Success 500 {object} dto.Response
+// @Success 200 {object} dto.ResponseData[dto.UserData]
+// @Failure 400 {object} dto.Response
+// @Failure 401 {object} dto.Response
+// @Failure 500 {object} dto.Response
 // @Router /admin/user [post]
 func (api userApi) Create(ctx *fiber.Ctx) error {
 	var userReq dto.UserReq
 	if err := ctx.BodyParser(&userReq); err != nil {
 		return ctx.Status(fiber.StatusBadRequest).JSON(dto.Response{
+			Status:  fiber.StatusBadRequest,
 			Message: err.Error(),
 		})
 	}
 
 	if err := userReq.Validate(); err != nil {
 		return ctx.Status(fiber.StatusBadRequest).JSON(dto.Response{
+			Status:  fiber.StatusBadRequest,
 			Message: err.Error(),
 		})
 	}
@@ -72,12 +84,14 @@ func (api userApi) Create(ctx *fiber.Ctx) error {
 	res, err := api.userService.Create(&userReq)
 	if err != nil {
 		return ctx.Status(fiber.StatusInternalServerError).JSON(dto.Response{
+			Status:  fiber.StatusInternalServerError,
 			Message: err.Error(),
 		})
 	}
 
-	return ctx.Status(fiber.StatusCreated).JSON(dto.ResponseData{
-		Data: res,
+	return ctx.Status(fiber.StatusCreated).JSON(dto.ResponseData[dto.UserData]{
+		Status: fiber.StatusOK,
+		Data:   res,
 	})
 }
 
@@ -89,19 +103,23 @@ func (api userApi) Create(ctx *fiber.Ctx) error {
 // @Security BearerAuth
 // @Param id path int true "user id"
 // @Param project body dto.UserUpdateReq true "payload user"
-// @Success 200 {object} dto.Response
-// @Success 500 {object} dto.Response
+// @Success 200 {object} dto.ResponseData[dto.UserData]
+// @Failure 500 {object} dto.Response
+// @Failure 401 {object} dto.Response
+// @Failure 400 {object} dto.Response
 // @Router /admin/user/{id} [put]
 func (api userApi) Update(ctx *fiber.Ctx) error {
 	var userReq dto.UserUpdateReq
 	if err := ctx.BodyParser(&userReq); err != nil {
 		return ctx.Status(fiber.StatusBadRequest).JSON(dto.Response{
+			Status:  fiber.StatusBadRequest,
 			Message: err.Error(),
 		})
 	}
 
 	if err := userReq.Validate(); err != nil {
 		return ctx.Status(fiber.StatusBadRequest).JSON(dto.Response{
+			Status:  fiber.StatusBadRequest,
 			Message: err.Error(),
 		})
 	}
@@ -109,6 +127,7 @@ func (api userApi) Update(ctx *fiber.Ctx) error {
 	id, err := strconv.Atoi(ctx.Params("id"))
 	if err != nil {
 		return ctx.Status(fiber.StatusBadRequest).JSON(dto.Response{
+			Status:  fiber.StatusBadRequest,
 			Message: err.Error(),
 		})
 	}
@@ -116,11 +135,12 @@ func (api userApi) Update(ctx *fiber.Ctx) error {
 	res, err := api.userService.Update(userReq, int64(id))
 	if err != nil {
 		return ctx.Status(fiber.StatusInternalServerError).JSON(dto.Response{
+			Status:  fiber.StatusInternalServerError,
 			Message: err.Error(),
 		})
 	}
 
-	return ctx.Status(fiber.StatusOK).JSON(dto.ResponseData{
+	return ctx.Status(fiber.StatusOK).JSON(dto.ResponseData[dto.UserData]{
 		Data: res,
 	})
 }
@@ -132,41 +152,60 @@ func (api userApi) Update(ctx *fiber.Ctx) error {
 // @Produce json
 // @Security BearerAuth
 // @Param id path int true "user id"
-// @Success 200 {object} dto.Response
-// @Success 500 {object} dto.Response
+// @Success 204 {object} dto.Response
+// @Failure 400 {object} dto.Response
+// @Failure 401 {object} dto.Response
+// @Failure 500 {object} dto.Response
 // @Router /admin/user/{id} [delete]
 func (api userApi) Delete(ctx *fiber.Ctx) error {
 	id, err := strconv.Atoi(ctx.Params("id"))
 	if err != nil {
 		return ctx.Status(fiber.StatusBadRequest).JSON(dto.Response{
+			Status:  fiber.StatusBadRequest,
 			Message: err.Error(),
 		})
 	}
 	err = api.userService.Delete(int64(id))
 	if err != nil {
 		return ctx.Status(fiber.StatusInternalServerError).JSON(dto.Response{
+			Status:  fiber.StatusInternalServerError,
 			Message: err.Error(),
 		})
 	}
-	return ctx.Status(fiber.StatusOK).JSON(dto.Response{
+	return ctx.Status(fiber.StatusNoContent).JSON(dto.Response{
+		Status:  fiber.StatusNoContent,
 		Message: "success",
 	})
 }
 
+// @Tags User
+// @Summary User Detail
+// @Description User Detail
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Success 200 {object} dto.ResponseData[dto.UserData]
+// @Failure 400 {object} dto.Response
+// @Failure 401 {object} dto.Response
+// @Failure 500 {object} dto.Response
+// @Router /admin/user/{id} [get]
 func (api userApi) GetByID(ctx *fiber.Ctx) error {
 	id, err := strconv.Atoi(ctx.Params("id"))
 	if err != nil {
 		return ctx.Status(fiber.StatusBadRequest).JSON(dto.Response{
+			Status:  fiber.StatusBadRequest,
 			Message: err.Error(),
 		})
 	}
 	user, err := api.userService.GetByID(int64(id))
 	if err != nil {
 		return ctx.Status(fiber.StatusInternalServerError).JSON(dto.Response{
+			Status:  fiber.StatusInternalServerError,
 			Message: err.Error(),
 		})
 	}
-	return ctx.Status(fiber.StatusOK).JSON(dto.ResponseData{
-		Data: user,
+	return ctx.Status(fiber.StatusOK).JSON(dto.ResponseData[dto.UserData]{
+		Status: fiber.StatusOK,
+		Data:   user,
 	})
 }
